# Shutter

./: .gitignore  AGENT.md  README.md  TODOS.md  pyproject.toml  secrets_template.json
cloudflare/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
cloudflare/migrations/: 0001_create_offenders.sql
cloudflare/src/: canary.ts  database.ts  extraction.ts  fetch.ts  index.ts  types.ts
docs/: API.md  PROMPTS.md  RESEARCH.md  SPEC.md  USAGE.md
src/grove_shutter/: __init__.py  canary.py  cli.py  config.py  core.py  database.py  extraction.py  fetch.py  models.py
tests/: __init__.py  test_canary.py  test_config.py  test_core.py  test_database.py  test_extraction.py
